--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,7 @@
 ---
 import AppFooter from "../components/AppFooter.astro";
-import AppHeader from "../components/AppHeader.astro"
+import AppHeader from "../components/AppHeader.astro";
 ---
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,15 +10,18 @@ import AppHeader from "../components/AppHeader.astro"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Template built with tailwindcss using Tailus blocks v2">
-		<title>Tailus astro theme</title>
+		<meta name="description" content="Owllen english dictionary" />
+		<title>Owllen</title>
 
-		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body class="bg-white dark:bg-gray-900">
-		<AppHeader/>
+		<AppHeader />
 		<slot />
-		<AppFooter/>
+		<AppFooter />
 	</body>
 </html>
 <style>
