fix deadlink and dead app icon

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -27,7 +27,7 @@ import Container from "./Container.astro";
                             class="rounded-md"
                             width="30"
                             height="30"
-                            src="./images/app_icon.png"
+                            src="/images/app_icon.png"
                             alt="image description"
                         />
 
