--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -11,7 +11,7 @@ import Container from "./Container.astro";
     >
       <div class="flex w-full justify-center md:justify-between">
         <div class="text-gray-600 dark:text-gray-300 space-x-4">
-          <a href="privacy_policy.html" class="font-medium"> Privacy Policy</a>
+          <a href="/privacy_policy" class="font-medium">Privacy Policy</a>
         </div>
       </div>
       <div class="flex pt-8 md:pt-0 md:pr-20 md:flex-row gap-4">
