update icon and branding name colors

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -28,11 +28,10 @@ import Container from "./Container.astro";
                             width="30"
                             height="30"
                             src="/images/app_icon.png"
-                            alt="image description"
+                            alt="logo"
                         />
 
-                        <span
-                            class="text-2xl text-grey-900 dark:text-white pl-2"
+                        <span class="text-2xl text-primary dark:text-white"
                             >Owllen</span
                         >
                     </a>
