--- a/src/components/FeatureComponent.astro
+++ b/src/components/FeatureComponent.astro
@@ -7,7 +7,7 @@ const { title, text, icon, icon_alt_text } = Astro.props;
     class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
 >
     <div class="relative space-y-8 py-12 p-8">
-        <img class="w-12" src={icon} alt={icon_alt_text} />
+        <img class="w-12 fill-teal-900" src={icon} alt={icon_alt_text} />
 
         <div class="space-y-2">
             <h5
