Replace the web_demo file, and comment out the download button on the footer for now.

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -14,10 +14,11 @@ import Container from "./Container.astro";
           <a href="/privacy_policy" class="font-medium">Privacy Policy</a>
         </div>
       </div>
-      <div class="flex pt-8 md:pt-0 md:pr-20 md:flex-row gap-4">
+      <!-- Enable once apps are launched -->
+      <!-- <div class="flex pt-8 md:pt-0 md:pr-20 md:flex-row gap-4">
         <img src="./images/play_store.svg" alt="Get it on Google Play" />
         <img src="./images/app_store.svg" alt="Download on the App Store" />
-      </div>
+      </div> -->
     </div>
   </Container>
 </footer>
